# sqlike

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  THREAT-MODEL.md  glama.json  server.json  smithery.yaml
.github/workflows/: release-cli.yml  release-homebrew.yml  release-mcp.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/core-parse/: Cargo.toml
crates/core-parse/src/: dialect.rs  equivalence.rs  lib.rs  plan.rs  result.rs
crates/core-parse/src/enrich/: common.rs  mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
crates/core-parse/src/model/: dml.rs  expr.rs  mod.rs  name.rs  query.rs  resolve.rs  stage.rs  tables.rs  translate.rs  ty.rs
crates/core-parse/src/parser/: error.rs  mod.rs
crates/core-parse/src/schema/: mod.rs  parse.rs
crates/core-parse/src/tokenize/: detok.rs  finalize.rs  mod.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
skills/sqlike/: SKILL.md
