[workspace]
members = ["crates/core-parse", "crates/client", "crates/cli", "crates/mcp"]
resolver = "2"

[workspace.package]
version = "0.1.10"
edition = "2021"
authors = ["Ori Fisher"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
sqlparser = "0.62"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
ureq = "3"
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
roxmltree = "0.20"
